manifest version 2に対応 background使ってなかったので削除 セレクタ修正

--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,19 @@
 {
     "name": "まかない",
-    "version": "1.0",
+    "manifest_version": 2,
+    "version": "2.0",
     "description": "株式会社はてなのオフィスランチをメニューを紹介します。",
     "permissions" : [
-        "https://mobile.twitter.com/",
-        "https://api.twitter.com/"
+        "https://mobile.twitter.com/"
     ],
     "icons": {
         "16": "icon16.png",
         "48": "icon48.png",
         "128": "icon128.png"
     },
-    "background_page" : "background.html",
     "browser_action": {
         "default_icon": "icon19.png",
         "default_title": "まかない",
-        "popup": "popup.html"
+        "default_popup": "popup.html"
     }
 }
